assets/styles/main.scss
/* ... */
@mixin prose-heading {
	font-family: $font-bernino;
	font-weight: 600;
	letter-spacing: -0.72px;
	line-height: 1.2;
	margin-bottom: 4px;
}

@mixin prose-body {
	font-family: $font-freight;
	font-size: 19px;
	font-weight: 300;
	letter-spacing:0.159px;
	line-height: 1.5;
	margin-bottom: 24px;
	word-wrap: break-word;
}

@mixin prose-body-sans {
	font-family: $font-bernino;
	font-size: 17px;
	font-weight: 400;
	letter-spacing:0.159px;
	line-height: 1.5;
	margin-bottom: 24px;
	word-wrap: break-word;
}

@mixin hyphenate {
  overflow-wrap: break-word;
      word-wrap: break-word;
  -ms-word-wrap: break-all;
      word-wrap: break-all;
  -webkit-hyphens: auto;
     -moz-hyphens: auto;
      -ms-hyphens: auto;
          hyphens: auto;
}


/* Flatten das boostrap */

.well,
.navbar-inner,
.popover,
.btn,
.tooltip,
input,
select,
textarea,
pre,
.progress,
.modal,
.add-on,
.alert,
.table-bordered,
.tooltip-inner,
.badge,
.label,
.img-polaroid {
	-webkit-box-shadow: none !important;
 		 -moz-box-shadow: none !important;
 		 			box-shadow: none !important;
 	border-radius: $border-radius;
	border-collapse: collapse !important;
	background-image: none !important;
}


/** Basic Elements **/

html {
	margin:0;
	padding:0;
	height: 100%;
}

body {
	font-family: $font-bernino;
	font-size: 17px;
	font-weight: 400;
	color: $grey-darker;
	min-height:100%;
	-webkit-font-smoothing: antialiased;
	-webkit-font-smoothing: subpixel-antialiased;
}

.wrap {
	padding-top: 0;
	padding-bottom: 75px;

	@media (min-width: $screen-sm-min) {
		padding-top: 100px;
	}
}

h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6 {
	font-weight: 600;
	margin-top: 20px;
}

h1,
.h1 {
	font-size: 36px;
}

h2,
.h2 {
	font-size: 30px;
}

h3,
.h3 {
	font-size: 27px;
}

h4,
.h4 {
	font-size: 23px;
}

h5,
.h5 {
	font-size: 19px;
}

h6,
.h6 {
	font-size: 17px;
}

hr {
	border-top: $border-grey-lighter-2px;
}

a {
	color: $link-color;

	&:hover,
	&:active,
	&:focus {
		color: $link-color-hover;
	}
}

p {
	text-rendering: optimizeLegibility;
	-webkit-font-feature-settings: "kern";
		 -moz-font-feature-settings: "kern";
		 -moz-font-feature-settings: "kern=1";
		 			font-feature-settings: "kern";
	font-kerning: normal;
}

.main,
.archive-top-content {
	h1, h2, h3, h4, h5, h6 {
		@include prose-heading;
	}

	p,
	ul,
	ol {
		@include prose-body-sans;
	}

	ul,
	ol {
		overflow: hidden;
	}
}

.serif {
	.main,
	.archive-top-content {
		p,
		ul,
		ol {
			@include prose-body;
		}

		/* Class to use sans-serif font for body text even on serif-specified page */
		p.sans-serif {
			@include prose-body-sans;
		}
	}
}

.entry-summary {

	p,
	ul,
	ol {
		@include prose-body;
		text-align: justify;
	}
}

/* Ensure blog posts use serif font unless otherwise indicated */
.entry-content.serif {

	p,
	ul,
	ol {
		@include prose-body;
		text-align: justify;
	}
}

/* Handy little class to make a quote or line of text stand out */
.callout,
.main .callout,
.archive-top-content .callout {
	text-align: center;
	font-family: $font-freight;
	font-weight: 600;
	font-style: italic;
	letter-spacing:0.159px;
	line-height: 1.4;
	margin-bottom: 20px;
}

img {
	border-radius: 2px;
}

.alignleft {
  display: block;
  margin: 15px auto;

	@media (min-width: $screen-sm-min) {
    float: left;
    margin: 5px 20px 15px 0;
	}
}

.alignright {
  display: block;
  margin: 15px auto;

	@media (min-width: $screen-sm-min) {
    float: right;
    margin: 5px 0 15px 20px;
	}
}

.aligncenter {
  display: block;
  margin: 15px auto;
}

.topimage {
	margin-top: 0 !important;
}

.circle {
	border-radius: 50%;
}

.wp-editor {
	ul {
		display: table;
	}

	.alignleft {
		float: none;
	  display: block;
	  margin: 15px auto;

		@media (min-width: 480px) {
	    float: left;
	    margin: 5px 20px 15px 0;
		}
	}

	.alignright {
		float: none;
	  display: block;
	  margin: 15px auto;

		@media (min-width: 480px) {
	    float: right;
	    margin: 5px 0 15px 20px;
		}
	}
}

iframe {
	max-width: 100% !important;
}

.wp-caption-text {
	font-size: 15px;
	color: $grey;
	padding-top: 7px;
}

textarea {
	resize:vertical;
}




/* ==========================================================================
   Header and Navigation
   ========================================================================== */

.navbar {
	margin-bottom: 0;
	padding: 10px 0;
	font-weight: 400;
	background: $white;
	position: relative;
	@include transition(all 0.2s);

	@media (min-width: $screen-sm-min) {
		position: fixed;
		padding: 25px 0;
	}

	.social-links {
		text-align: center;
		padding-bottom: 20px;
		line-height: 1;
		list-style-type: none;
 		-webkit-padding-start: 0px;
		-webkit-margin-before: 0px;
		 -webkit-margin-after: 0px;
		 -webkit-margin-start: 0px;
		   -webkit-margin-end: 0px;
		@include transition(all 0.2s);

		@media (min-width: $screen-sm-min) {
			float: right;
			padding-bottom: 10px;
		}

		.fa {
			font-size: 16px;
			padding: 0;
			height: auto;
			width: auto;
			margin-right: 5px;
			color: $accent-color;
			background-color: transparent;

			&:hover,
			&:active,
			&:focus {
				color: darken($accent-color, 10%);
				background-color: transparent;
			}
		}

		li:last-child a {
			margin-right: 15px;

			@media (min-width: $screen-sm-min) {
				margin-right: 0;
			}
		}
	}

	.social-links-above {
		display: none;
		@include transition(all 0.2s);

		@media (min-width: $screen-sm-min) {
			display: block;
		}
	}

	.social-links-below {
		display: block;
		@include transition(all 0.2s);

		@media (min-width: $screen-sm-min) {
			display: none;
		}

		.fa {
			font-size: 18px;
			margin-right: 6px;
		}
	}
}
/* ... */

